--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "async": "^0.9.0",
     "underscore": "^1.8.0",
     "node-sass": "^2.1.1",
-    "node-sass-middleware": "^0.5.0", 
+    "node-sass-middleware": "^0.5.0",
     "dotenv": "^1.1.0"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-watch": "^0.6.5",
     "jshint-stylish": "^0.1.3",
-    "gulp-watch": "^0.6.5"
+    "jspm": "^0.16.2"
   },
   "engines": {
     "node": ">=0.10.22",
@@ -23,5 +24,16 @@
   "scripts": {
     "start": "node keystone.js"
   },
-  "main": "keystone.js"
+  "main": "keystone.js",
+  "jspm": {
+    "directories": {
+      "baseURL": "public"
+    },
+    "dependencies": {},
+    "devDependencies": {
+      "babel": "npm:babel@^4.7.16",
+      "babel-runtime": "npm:babel-runtime@^4.7.16",
+      "core-js": "npm:core-js@^1.1.0"
+    }
+  }
 }
