--- a/package.json
+++ b/package.json
@@ -29,7 +29,14 @@
     "directories": {
       "baseURL": "public"
     },
-    "dependencies": {},
+    "dependencies": {
+      "backbone": "npm:backbone@^1.2.3",
+      "backbone.babysitter": "github:marionettejs/backbone.babysitter@^0.1.10",
+      "backbone.wreqr": "github:marionettejs/backbone.wreqr@^1.3.5",
+      "jquery": "github:components/jquery@^2.1.4",
+      "marionette": "github:marionettejs/backbone.marionette@^2.4.3",
+      "underscore": "npm:underscore@^1.8.3"
+    },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
       "babel-runtime": "npm:babel-runtime@^4.7.16",
